--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -32,7 +32,7 @@
 
   <nav>
     <!-- Navigation links, direction to other pages -->
-    <button onclick="toggleMenu()">&#9776 Menu</button>
+    <button onclick="toggleMenu()">&#9776; Menu</button>
     <ul id="pageOptions" class="hide">
       <li><a href="../index.html">Home</a></li>
       <li><a id="active-page">Preston</a></li>
@@ -46,21 +46,21 @@
   <div id="content">
     <main>
       <h2>Preston Idaho</h2>
-      <section>
+      <div class="sections">
         <p>Hero w/ weather summary</p>
-      </section>
+      </div>
 
-      <section>
+      <div class="sections">
         <p>5 Day Forecast</p>
-      </section>
+      </div>
 
-      <section>
+      <div class="sections">
         <p>Article</p>
-      </section>
+      </div>
 
-      <section>
+      <div class="sections">
         <p>Contact Information</p>
-      </section>
+      </div>
 
     </main>
 
