--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description"
     content="Assignment Portal for Diogo Parente in CIT 230: Web Frontend Development at Brigham Young University - Idaho">
   <title>CIT 230 | Assignment Portal</title>
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/medium.css">
