--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <ul>
         <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="lesson3/index.html">Weather Website Planning</a></li>
-        <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page W4</a> | <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
+        <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page W4</a></li>
+        <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
       </ul>
     </main>
 
