--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/medium.css">
   <link rel="stylesheet" href="styles/small.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="functions/dateVerify.js"></script>
 </head>
 
@@ -38,7 +37,8 @@
         <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="lesson3/index.html">Weather Website Planning</a></li>
         <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page W4</a></li>
-        <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
+        <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page W5</a></li>
+        <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page</a></li>
       </ul>
     </main>
 
@@ -49,6 +49,16 @@
       <p id="line2">Last updated: <span id="dateModified"></span></p>
     </footer>
   </div>
+
+  <!-- WEB FONT LOADER -->
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ["Lato"]
+      }
+    });
+  </script>
 </body>
 
 </html>
