--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <ul>
         <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="lesson3/index.html">Weather Website Planning</a></li>
-        <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page W4</a></li>
-        <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page W5</a></li>
-        <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page</a></li>
+        <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page: Responsive Layouts</a></li>
+        <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
+        <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page: Responsive Images</a></li>
       </ul>
     </main>
 
