--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page: Responsive Layouts</a></li>
         <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
         <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page: Responsive Images</a></li>
+        <li>Lesson 07: <a href="lesson7/gallery-7.html">The Image Gallery</a> | <a href="lesson7/lazyload.html">Lazyload</a></li>
+
       </ul>
     </main>
 
