--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Preston Town Page for CIT 230: Weather Website Planning">
+  <meta name="description" content="Preston Town Page for CIT 230: Weather Website">
   <title>CIT 230 | Week 6 | Preston Town</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
@@ -41,7 +41,7 @@
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li><a href="#">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
 
