--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Preston Town Page for CIT 230: Weather Website Planning">
+  <meta name="description" content="Preston Town Page for CIT 230: Weather Website">
   <title>CIT 230 | Week 4 | Preston Town</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
