--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -18,27 +18,27 @@
 
   <main>
     <div class="box">
-      <img src="images/Placeholder.png" data-src="images/1.jpg" alt="number 1">
+      <img src="images/Placeholder.png" data-src="images/apple.jpg" alt="apple">
     </div>
 
     <figure class="box">
-      <img src="images/Placeholder.png" data-src="images/2.jpg" alt="number 2">
+      <img src="images/Placeholder.png" data-src="images/grapes.jpg" alt="grapes">
     </figure>
 
     <picture class="box">
-      <img src="images/Placeholder.png" data-src="images/3.jpg" alt="number 3">
+      <img src="images/Placeholder.png" data-src="images/orange.jpg" alt="orange">
     </picture>
 
     <picture class="box">
-      <img src="images/Placeholder.png" data-src="images/4.jpg" alt="number 4">
+      <img src="images/Placeholder.png" data-src="images/pineapple.jpg" alt="pineapple">
     </picture>
 
     <picture class="box">
-      <img src="images/Placeholder.png" data-src="images/5.jpg" alt="number 5">
+      <img src="images/Placeholder.png" data-src="images/strawberry.jpg" alt="strawberry">
     </picture>
 
     <picture class="box">
-      <img src="images/Placeholder.png" data-src="images/6.jpg" alt="number 6">
+      <img src="images/Placeholder.png" data-src="images/watermelon.jpg" alt="watermelon">
     </picture>
 
   </main>
