--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -48,42 +48,42 @@
       <h2>Weather Gallery</h2>
 
       <div class="pictures">
-        <div>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/sunny.jpg" alt="Sunny">
           <figcaption>Clear sunny day</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/snow.jpg" alt="Snow">
           <figcaption>Cold winter</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/cloudy.jpg" alt="Cloudy">
           <figcaption>Cloudy and dark</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/rainy.jpg" alt="Rainy">
           <figcaption>Rainy</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/snowy.jpg" alt="Snowy">
           <figcaption>Snowy</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/wind.jpg" alt="Windy">
           <figcaption>Windy</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/storm.jpg" alt="Stormy">
           <figcaption>Stormy</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/tornado.jpg" alt="Tornado">
           <figcaption>Tornado</figcaption>
-        </div>
-        <div>
+        </figure>
+        <figure>
           <img src="images/Placeholder2.png" data-src="images/hurricane.jpg" alt="Hurricane">
           <figcaption>Hurricane</figcaption>
-        </div>
+        </figure>
         
       </div>
     </main>
