--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
         <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page: Responsive Images</a></li>
         <li>Lesson 07: <a href="lesson7/gallery-7.html">The Image Gallery</a> | <a href="lesson7/lazyload.html">Lazyload</a></li>
+        <li>Lesson 08: <a href="lesson8/stormcenter.html">The Storm Center</a> | <a href="lesson8/tablebuild.html">Table Build</a></li>
 
       </ul>
     </main>
