--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -10,55 +10,76 @@
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="styles/large8.css">
   <link rel="stylesheet" href="styles/medium8.css">
-  <link rel="stylesheet" href="styles/small8.css">  
+  <link rel="stylesheet" href="styles/small8.css">
   <link rel="stylesheet" href="styles/tablebuild.css">
   <script src="../functions/dateVerify.js"></script>
   <script src="../functions/Menu.js"></script>
   <script src="../lesson7/functions/lazyload.js" defer></script>
 </head>
 
-<body onload="dates()">
+<body>
+  <a href="../index.html">Home</a>
 
-  <header>
-    <!-- HEADER SECTION -->
-    <!-- Nome, Título -->
-    <div class="logo">
-      <img src="../lesson3/images/logo_weather1.png" alt="Website logo">
-    </div>
-    <div>
-      <h1>The Weather for You</h1>
-      <p>The forecast you need for your weather.</p>
-    </div>
-  </header>
+  <main>
+    <table>
+      <thead>
+        <tr>
+          <td colspan="3">ACME Wildwest</td>
+        </tr>
+        <tr>
+          <th>Period</th>
+          <th>Sales</th>
+          <th>Sales Goal</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>August</td>
+          <td>$3,590</td>
+          <td>$4,000</td>
+        </tr>
+        <tr>
+          <td>September</td>
+          <td>$4,420</td>
+          <td>$5,000</td>
+        </tr>
+        <tr>
+          <td>October</td>
+          <td>$4,870</td>
+          <td>$5,000</td>
+        </tr>
+        <tr>
+          <td>November</td>
+          <td>$8,610</td>
+          <td id="cel">$7,500</td>
+        </tr>
+        <tr>
+          <td><i>Black Friday</i></td>
+          <td colspan="2">$3,200</td>
+        </tr>
+        <tr>
+          <td>December</td>
+          <td>$6,820</td>
+          <td>$7,500</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3">Compiled 12.20.2020 by bRauls</td>
+        </tr>
+      </tfoot>
+    </table>
 
-  <nav>
-    <!-- Navigation links, direction to other pages -->
-    <button onclick="toggleMenu()">&#9776; Menu</button>
-    <ul id="pageOptions" class="hide">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../lesson6/preston-6.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
-      <li><a href="stormcenter.html">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
-    </ul>
-  </nav>
+  </main>
 
-  <div id="content">
-    <main>
-      <h2>Table Build</h2>
-
-    </main>
-
-    <footer>
-      <!-- FOOTER SECTION -->
-      <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a
-          href="https://www.byui.edu/online" target="_blank">BYU-I Online
-          Learning</a></p>
-      <p id="line3">Last updated: <span id="dateModified"></span></p>
-      <p id="line2"><span id="currentDate"></span></p>
-    </footer>
-  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Ubuntu']
+      }
+    });
+  </script>
 
 </body>
 
