--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -84,7 +84,29 @@
           <img src="images/Placeholder2.png" data-src="images/hurricane.jpg" alt="Hurricane">
           <figcaption>Hurricane</figcaption>
         </figure>
-        
+      </div>
+
+      <div class="contact">
+        <div>
+          <img class="map" src="../lesson5/images/map.JPG" alt="Downtown">
+        </div>
+        <div>
+          <p class="titleInfo">The Weather For You</p>
+          <p>&odot; Brazil</p>
+          <p>&phone; +55 (12) 3456-7890</p>
+          <p>&#9993; foryou@theweather.com</p>
+          <div>
+            <!-- Social Media links -->
+            <a href="http://www.facebook.com/" target="_blank"><img class="icon"
+                src="../lesson5/images/icon-facebook.png" alt="Facebook"></a>
+            <a href="http://www.pinterest.com/" target="_blank"><img class="icon"
+                src="../lesson5/images/icon-pinterest.png" alt="Pinterest"></a>
+            <a href="http://www.twitter.com/" target="_blank"><img class="icon" src="../lesson5/images/icon-twitter.png"
+                alt="Twitter"></a>
+            <a href="http://www.instagram.com/" target="_blank"><img class="icon"
+                src="../lesson5/images/icon-instagram.png" alt="Instagram"></a>
+          </div>
+        </div>
       </div>
     </main>
 
