--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -47,6 +47,47 @@
     <main>
       <h2>Storm Center</h2>
 
+      <form method="get" action="thanks.html">
+        <fieldset>
+          <legend><h3>Storm Report</h3></legend>
+          <label class="top">Full Name* <input type="text" name="name" placeholder="Your name" pattern="[A-z\s]{5,}" required></label>
+          <label class="top">Email* <input type="email" name="email" placeholder="name@email.com" required></label>
+          <label class="top">Phone* <input type="tel" name="phone" placeholder="" required></label>
+          <label class="top">Zip code* <input type="text" name="zipcode" placeholder="" required></label>
+          <label class="top">Storm date <input type="date" name="date" placeholder=""></label>
+
+          <label class="top">Storm type<input type="text" name="type" list="stormtype"></label>
+            <datalist id="stormtype">
+              <option value="Flash Flood"></option>
+              <option value="Hail"></option>
+              <option value="Hurricane"></option>
+              <option value="Thunderstorm"></option>
+              <option value="Tornado"></option>
+            </datalist>
+          
+          <label class="top">Severity <input type="range" name="severity" value="5" min="1" max="10"></label>
+
+          <label class="top">Storm Region
+            <select name="region">
+              <option value="" disabled selected>Please Select</option>
+              <option value="preston">Preston</option>
+              <option value="sodasprings">Soda Springs</option>
+              <option value="fishhaven">Fish Haven</option>
+            </select>
+          </label>
+
+          <div>Are you in danger?</div>
+          <label class="sbs"><input type="radio" name="danger" value="yes"> Yes</label>
+          <label class="sbs"><input type="radio" name="danger" value="maybe"> Maybe</label>
+          <label class="sbs"><input type="radio" name="danger" value="no"> No</label>
+
+          <div id="area">
+          <label class="top">Additional comments <textarea name="comments" placeholder="Any additional commentary"></textarea></label>
+        </div>
+        </fieldset>
+
+        <input type="submit" value="Send report" class="submitBtn">
+      </form>
     </main>
 
     <footer>
