--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -46,7 +46,7 @@
   <div id="content">
     <main>
       <h2>Thank you</h2>
-      <p>Your report has been received.</p>
+      <p id="tx">Your report has been received by the Storm Center.</p>
 
     </main>
 
