--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page: Responsive Images</a></li>
         <li>Lesson 07: <a href="lesson7/gallery-7.html">The Image Gallery</a> | <a href="lesson7/lazyload.html">Lazyload</a></li>
         <li>Lesson 08: <a href="lesson8/stormcenter.html">The Storm Center</a> | <a href="lesson8/tablebuild.html">Table Build</a></li>
+        <li>Lesson 09: <a href="lesson9/index.html">Weather Site Home Page</a> | <a href="lesson9/prophets.html">Prophets - JSON exercise</a></li>
 
       </ul>
     </main>
