--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -19,10 +19,10 @@
     <h1>Latter-day Prophets</div>
   </header>
   <main>
-    <div class="cards">  </div>
+    <div class="cards"> </div>
   </main>
   <footer>
-    Your name here | BYU-Idaho | CIT 230
+    Diogo Parente | BYU-Idaho | CIT 230
   </footer>
 
 
