--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -14,9 +14,8 @@
 <body>
   <a href="../index.html">Portal</a>
 
-
   <header>
-    <h1>Latter-day Prophets</div>
+    <h1>Latter-day Prophets</h1>
   </header>
   <main>
     <div class="cards"> </div>
