--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Weather Page: Responsive Layouts</a></li>
         <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Weather Page</a></li>
         <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Weather Page: Responsive Images</a></li>
-        <li>Lesson 07: <a href="lesson7/gallery-7.html">The Image Gallery</a> | <a href="lesson7/lazyload.html">Lazyload</a></li>
-        <li>Lesson 08: <a href="lesson8/stormcenter.html">The Storm Center</a> | <a href="lesson8/tablebuild.html">Table Build</a></li>
-        <li>Lesson 09: <a href="lesson9/index.html">Weather Site Home Page</a> | <a href="lesson9/prophets.html">Prophets - JSON exercise</a></li>
+        <li>Lesson 07: <a href="lesson7/gallery-7.html">The Image Gallery</a> | <a href="lesson7/lazyload.html" target="_blank">Lazyload</a></li>
+        <li>Lesson 08: <a href="lesson8/stormcenter.html">The Storm Center</a> | <a href="lesson8/tablebuild.html" target="_blank">Table Build</a></li>
+        <li>Lesson 09: <a href="lesson9/index.html" target="_blank">Weather Site Home Page</a> | <a href="lesson9/prophets.html" target="_blank">Prophets - JSON exercise</a></li>
 
       </ul>
     </main>
