--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -34,7 +34,7 @@
     <!-- Navigation links, direction to other pages -->
     <button onclick="toggleMenu()">&#9776; Menu</button>
     <ul id="pageOptions" class="hide">
-      <li><a href="../index.html">Home</a></li>
+      <li><a href="../lesson9/index.html">Home</a></li>
       <li><a href="../lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
