--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation links, direction to other pages -->
     <button onclick="toggleMenu()">&#9776; Menu</button>
     <ul id="pageOptions" class="hide">
-      <li><a  id="active-page">Home</a></li>
+      <li><a id="active-page">Home</a></li>
       <li><a href="../lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
@@ -44,11 +44,40 @@
   </nav>
 
   <div id="content">
-      <main>
-        <h2></h2>
-          <div class="towns"> </div>
-      </main>
+    <main>
+      <h2></h2>
+      <div class="towns"> </div>
 
+      <div class="links">
+        <h3>Making of The Weather for You Website</h3>
+        <p>Following are links for the different layouts you can experience surfing our Home Page.</p>
+        <p><a href="images/desktopView.JPG" target="_blank">Desktop view</a></p>
+        <p><a href="images/tabletView.JPG" target="_blank">Tablet view</a></p>
+        <p><a href="images/mobileView.JPG" target="_blank">Phone view</a></p>
+      </div>
+
+      <div class="contact">
+        <div>
+          <img class="map" src="../lesson5/images/map.JPG" alt="Downtown">
+        </div>
+        <div>
+          <p class="titleInfo">The Weather For You</p>
+          <p>&odot; Brazil</p>
+          <p>&phone; +55 (12) 3456-7890</p>
+          <p>&#9993; foryou@theweather.com</p>
+          <div id="icones">
+            <!-- Social Media links -->
+            <a href="http://www.facebook.com/" target="_blank"><img class="icon"
+                src="../lesson5/images/icon-facebook.png" alt="Facebook"></a>
+            <a href="http://www.pinterest.com/" target="_blank"><img class="icon"
+                src="../lesson5/images/icon-pinterest.png" alt="Pinterest"></a>
+            <a href="http://www.twitter.com/" target="_blank"><img class="icon" src="../lesson5/images/icon-twitter.png"
+                alt="Twitter"></a>
+            <a href="http://www.instagram.com/" target="_blank"><img class="icon"
+                src="../lesson5/images/icon-instagram.png" alt="Instagram"></a>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
