--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li>Lesson 07: <a href="lesson7/gallery-7.html">The Image Gallery</a> | <a href="lesson7/lazyload.html" target="_blank">Lazyload</a></li>
         <li>Lesson 08: <a href="lesson8/stormcenter.html">The Storm Center</a> | <a href="lesson8/tablebuild.html" target="_blank">Table Build</a></li>
         <li>Lesson 09: <a href="lesson9/index.html" target="_blank">Weather Site Home Page</a> | <a href="lesson9/prophets.html" target="_blank">Prophets - JSON exercise</a></li>
+        <li>Lesson 10: <a href="lesson10/preston-10.html" target="_blank">Preston Weather Page: Weather API</a></li>
 
       </ul>
     </main>
