--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -93,11 +93,11 @@
             <th class="tableDay"><span id="day5"></span></th>
           </tr>
           <tr>
-            <td><img class="weatherIcon" id="icon1" src="" alt=""></td>
-            <td><img class="weatherIcon" id="icon2" src="" alt=""></td>
-            <td><img class="weatherIcon" id="icon3" src="" alt=""></td>
-            <td><img class="weatherIcon" id="icon4" src="" alt=""></td>
-            <td><img class="weatherIcon" id="icon5" src="" alt=""></td>
+            <td><img class="weatherIcon" id="icon1" src="#" alt="#"></td>
+            <td><img class="weatherIcon" id="icon2" src="#" alt="#"></td>
+            <td><img class="weatherIcon" id="icon3" src="#" alt="#"></td>
+            <td><img class="weatherIcon" id="icon4" src="#" alt="#"></td>
+            <td><img class="weatherIcon" id="icon5" src="#" alt="#"></td>
           </tr>
           <tr>
             <td class="maxTemp"><span id="temp_max1"></span> ºF</td>
