--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -100,18 +100,11 @@
             <td><img class="weatherIcon" id="icon5" src="#" alt="#"></td>
           </tr>
           <tr>
-            <td class="maxTemp"><span id="temp_max1"></span> ºF</td>
-            <td class="maxTemp"><span id="temp_max2"></span> ºF</td>
-            <td class="maxTemp"><span id="temp_max3"></span> ºF</td>
-            <td class="maxTemp"><span id="temp_max4"></span> ºF</td>
-            <td class="maxTemp"><span id="temp_max5"></span> ºF</td>
-          </tr>
-          <tr>
-            <td class="minTemp"><span id="temp_min1"></span> ºF</td>
-            <td class="minTemp"><span id="temp_min2"></span> ºF</td>
-            <td class="minTemp"><span id="temp_min3"></span> ºF</td>
-            <td class="minTemp"><span id="temp_min4"></span> ºF</td>
-            <td class="minTemp"><span id="temp_min5"></span> ºF</td>
+            <td class="maxTemp"><span id="temp1"></span> ºF</td>
+            <td class="maxTemp"><span id="temp2"></span> ºF</td>
+            <td class="maxTemp"><span id="temp3"></span> ºF</td>
+            <td class="maxTemp"><span id="temp4"></span> ºF</td>
+            <td class="maxTemp"><span id="temp5"></span> ºF</td>
           </tr>
 
         </table>
