--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -40,8 +40,8 @@
       <li><a id="active-page">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
 
