--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -51,9 +51,9 @@
       <div class="links">
         <h3>Making of The Weather for You Website</h3>
         <p>Following are links for the different layouts you can experience surfing our Home Page.</p>
-        <p><a href="images/desktopView.JPG" target="_blank">Desktop view</a></p>
-        <p><a href="images/tabletView.JPG" target="_blank">Tablet view</a></p>
-        <p><a href="images/mobileView.JPG" target="_blank">Phone view</a></p>
+        <p><a href="../lesson9/images/desktopView.JPG" target="_blank">Desktop view</a></p>
+        <p><a href="../lesson9/images/tabletView.JPG" target="_blank">Tablet view</a></p>
+        <p><a href="../lesson9/images/mobileView.JPG" target="_blank">Phone view</a></p>
       </div>
 
       <div class="contact">
