--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li>Lesson 08: <a href="lesson8/stormcenter.html">The Storm Center</a> | <a href="lesson8/tablebuild.html" target="_blank">Table Build</a></li>
         <li>Lesson 09: <a href="lesson9/index.html" target="_blank">Weather Site Home Page</a> | <a href="lesson9/prophets.html" target="_blank">Prophets - JSON exercise</a></li>
         <li>Lesson 10: <a href="lesson10/preston-10.html" target="_blank">Preston Weather Page: Weather API</a></li>
+        <li>Lesson 11: <a href="lesson11/index.html" target="_blank">Weather Site Project</a></li>
 
       </ul>
     </main>
