--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -37,8 +37,8 @@
     <ul id="pageOptions" class="hide">
       <li><a href="index.html">Home</a></li>
       <li><a href="preston.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a href="fishhaven.html">Fish Haven</a></li>
       <li><a href="stormcenter.html">Storm Center</a></li>
       <li><a id="active-page">Gallery</a></li>
     </ul>
@@ -50,46 +50,46 @@
 
       <div class="pictures">
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/sunny.jpg" alt="Sunny">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/sunny.jpg" alt="Sunny day in open field">
           <figcaption>Clear sunny day</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/snow.jpg" alt="Snow">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/snow.jpg" alt="Land and trees covered with snow">
           <figcaption>Cold winter</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/cloudy.jpg" alt="Cloudy">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/cloudy.jpg" alt="Dark clouds, heavy storm comming">
           <figcaption>Cloudy and dark</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/rainy.jpg" alt="Rainy">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/rainy.jpg" alt="Rainning, everybody using umbrellas">
           <figcaption>Rainy</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/snowy.jpg" alt="Snowy">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/snowy.jpg" alt="Snow falling, three girls in cold clothes">
           <figcaption>Snowy</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/wind.jpg" alt="Windy">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/wind.jpg" alt="Wind blowing ">
           <figcaption>Windy</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/storm.jpg" alt="Stormy">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/storm.jpg" alt="Storm and thunder on the sea">
           <figcaption>Stormy</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/tornado.jpg" alt="Tornado">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/tornado.jpg" alt="Tornado strikes a farm land">
           <figcaption>Tornado</figcaption>
         </figure>
         <figure>
-          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/hurricane.jpg" alt="Hurricane">
+          <img src="../lesson7/images/Placeholder2.png" data-src="../lesson7/images/hurricane.jpg" alt="Hurricane affecting trees and roads">
           <figcaption>Hurricane</figcaption>
         </figure>
       </div>
 
       <div class="contact">
         <div>
-          <img class="map" src="../lesson5/images/map.JPG" alt="Downtown">
+          <img class="map" src="../lesson5/images/map.JPG" alt="Downtown map">
         </div>
         <div>
           <p class="titleInfo">The Weather For You</p>
