--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Storm Center Page for CIT 230: Weather Website">
-  <title>CIT 230 | Week 8 | Storm Center</title>
+  <title>CIT 230 | Week 11 | Thank you</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="styles/large11.css">
@@ -36,8 +36,8 @@
     <ul id="pageOptions" class="hide">
       <li><a href="index.html">Home</a></li>
       <li><a href="preston.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a href="fishhaven.html">Fish Haven</a></li>
       <li><a href="stormcenter.html">Storm Center</a></li>
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
