--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -37,8 +37,8 @@
     <ul id="pageOptions" class="hide">
       <li><a id="active-page">Home</a></li>
       <li><a href="preston.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a href="fishhaven.html">Fish Haven</a></li>
       <li><a href="stormcenter.html">Storm Center</a></li>
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
@@ -58,7 +58,7 @@
 
       <div class="contact">
         <div>
-          <img class="map" src="../lesson5/images/map.JPG" alt="Downtown">
+          <img class="map" src="../lesson5/images/map.JPG" alt="Downtown map">
         </div>
         <div>
           <p class="titleInfo">The Weather For You</p>
