--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Preston Town Page for CIT 230: Weather Website">
-  <title>CIT 230 | Week 11 | Preston Town</title>
+  <title>CIT 230 | Week 11 | Fish Haven Town</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="styles/large11.css">
@@ -13,14 +13,10 @@
   <link rel="stylesheet" href="styles/small11.css">
   <script src="../functions/dateVerify.js"></script>
   <script src="../functions/Menu.js"></script>
-  <script src="functions/preston.js"></script>
 </head>
 
 <body onload="dates()">
 
-  <div id="pancake" class="hideAlert">
-    <p><b>Saturday = Preston Pancakes in the Park!<br>9:00 a.m. Saturday at the city park pavilion.</b></p>
-  </div>
   <header>
     <!-- HEADER SECTION -->
     <!-- Nome, Título -->
@@ -48,7 +44,7 @@
 
   <div id="content">
     <main>
-      <h2>Preston, Idaho</h2>
+      <h2>Fish Haven</h2>
 
       <div class="hero">
         <div class="summary">
@@ -77,9 +73,9 @@
           </table>
         </div>
         <picture>
-          <source srcset="../lesson10/images/JoinvilleLarge.JPG" media="(min-width:1000px)">
-          <source srcset="../lesson10/images/JoinvilleMedium.JPG" media="(min-width:550px)">
-          <img class="jlle" src="../lesson10/images/JoinvilleSmall.JPG" alt="City's Main Entrance">
+          <source srcset="images/museuLarge.jpg" media="(min-width:1000px)">
+          <source srcset="images/museuMedium.JPG" media="(min-width:550px)">
+          <img class="jlle" src="images/museuSmall.JPG" alt="Museu do Imigrante">
         </picture>
       </div>
 
@@ -111,7 +107,7 @@
       </div>
 
       <div class="event">
-        <h3>Upcoming Events for Preston</h3>
+        <h3>Upcoming Events for Fish Haven</h3>
         <div class="townEvents"> </div>
       </div>
 
@@ -178,7 +174,7 @@
     </footer>
   </div>
 
-  <script src="functions/preston.js"></script>
+  <script src="functions/fishHaven.js"></script>
 </body>
 
 </html>
