--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -73,9 +73,9 @@
           </table>
         </div>
         <picture>
-          <source srcset="images/estradaLarge.JPG" media="(min-width:1000px)">
-          <source srcset="images/estradaMedium.JPG" media="(min-width:550px)">
-          <img class="jlle" src="images/estradaSmall.JPG" alt="Estrada Bonita">
+          <source srcset="images/estradaLarge.jpg" media="(min-width:1000px)">
+          <source srcset="images/estradaMedium.jpg" media="(min-width:550px)">
+          <img class="jlle" src="images/estradaSmall.jpg" alt="Estrada Bonita">
         </picture>
       </div>
 
