--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -74,8 +74,8 @@
         </div>
         <picture>
           <source srcset="images/museuLarge.jpg" media="(min-width:1000px)">
-          <source srcset="images/museuMedium.JPG" media="(min-width:550px)">
-          <img class="jlle" src="images/museuSmall.JPG" alt="Museu do Imigrante">
+          <source srcset="images/museuMedium.jpg" media="(min-width:550px)">
+          <img class="jlle" src="images/museuSmall.jpg" alt="Museu do Imigrante">
         </picture>
       </div>
 
