--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li>Lesson 09: <a href="lesson9/index.html" target="_blank">Weather Site Home Page</a> | <a href="lesson9/prophets.html" target="_blank">Prophets - JSON exercise</a></li>
         <li>Lesson 10: <a href="lesson10/preston-10.html" target="_blank">Preston Weather Page: Weather API</a></li>
         <li>Lesson 11: <a href="lesson11/index.html" target="_blank">Weather Site Project</a></li>
+        <li>Lesson 12: <a href="lesson12/index.html" target="_blank">Christmas Ranch: CSS Preprocessor</a></li>
 
       </ul>
     </main>
