--- a/final-project/index.html
+++ b/final-project/index.html
@@ -30,11 +30,9 @@
     </div>
   </header>
 
-  <button class="botaoMenu" onclick="toggleMenu()">&#9776; Menu</button>
-
   <nav>
     <!-- Navigation links, direction to other pages -->
-    <button class="botaoMenu" onclick="toggleMenu()">&#9776; Menu</button>
+    <button onclick="toggleMenu()">&#9776; Menu</button>
     <ul id="pageOptions" class="hide">
       <li><a id="active-page">Home</a></li>
       <li><a href="temples.html">Temples</a></li>
@@ -43,6 +41,15 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+
+  <footer>
+    <!-- FOOTER SECTION -->
+    <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a
+        href="https://www.byui.edu/online" target="_blank">BYU-I Online
+        Learning</a></p>
+    <p id="line3">Last updated: <span id="dateModified"></span></p>
+    <p id="line4"><span id="currentDate"></span></p>
+  </footer>
 
 </body>
 
