--- a/final-project/index.html
+++ b/final-project/index.html
@@ -42,6 +42,10 @@
     </ul>
   </nav>
 
+<main>
+  <h2>Home</h2>
+</main>
+
   <footer>
     <!-- FOOTER SECTION -->
     <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a
