--- a/final-project/index.html
+++ b/final-project/index.html
@@ -42,8 +42,16 @@
     </ul>
   </nav>
 
-<main>
-  <h2>Home</h2>
+  <main>
+    <picture>
+      <source srcset="images/templeBannerLarge.jpg" media="(min-width:1000px)">
+      <source srcset="images/templeBannerMedium.jpg" media="(min-width:550px)">
+      <img class="banner" src="images/templeBannerSmall.jpg" alt="Utah Temple Banner">
+    </picture>
+
+ <a href="reservation.html" class="reserveButton">Make a Reservation</a>
+
+ <h2>Home</h2>
 </main>
 
   <footer>
