--- a/final-project/index.html
+++ b/final-project/index.html
@@ -51,7 +51,31 @@
 
  <a href="reservation.html" class="reserveButton">Make a Reservation</a>
 
- <h2>Home</h2>
+ <h2 class="indexH2">Home</h2>
+
+
+ <div class="contact">
+  <div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.405019701325!2d-77.0977204852361!3d38.983251779557506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97b6b3b5b43%3A0x9c8eb1c5547b83eb!2s4800%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1576462501161!5m2!1spt-BR!2sbr" allowfullscreen=""></iframe>
+  </div>
+  <div>
+    <p class="titleInfo">The Temple Inn & Suites</p>
+    <p>&odot; 4800 Montgomery Ln #300, Bethesda, MD 20814</p>
+    <p>&phone; +1 (12) 3456-7890</p>
+    <p>&#9993; contact@templesuites.com</p>
+    <div id="icones">
+      <!-- Social Media links -->
+      <a href="http://www.facebook.com/" target="_blank"><img class="icon"
+          src="../lesson5/images/icon-facebook.png" alt="Facebook"></a>
+      <a href="http://www.pinterest.com/" target="_blank"><img class="icon"
+          src="../lesson5/images/icon-pinterest.png" alt="Pinterest"></a>
+      <a href="http://www.twitter.com/" target="_blank"><img class="icon" src="../lesson5/images/icon-twitter.png"
+          alt="Twitter"></a>
+      <a href="http://www.instagram.com/" target="_blank"><img class="icon"
+          src="../lesson5/images/icon-instagram.png" alt="Instagram"></a>
+    </div>
+  </div>
+</div>
 </main>
 
   <footer>
