--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -42,7 +42,18 @@
   </nav>
 
 <main>
-  <h2>Contact</h2>
+  <section class="content">
+    <div>
+      <h2>Contact Us</h2>
+      <p>Any question? Complaint? Compliment?<br>Send us a message. We'll answer ASAP.</p>
+      <input class="line-input" type="text" id="name" placeholder="Name">
+      <input class="line-input" type="text" id="email" placeholder="Email address">
+      <input class="line-input" type="text" id="title" placeholder="Title for the message">
+      <form><textarea class="text-input" placeholder="Write your message here"></textarea></form>
+      <button class="button" type="button" onclick="sendEmail()">Send Message</button>
+      <input class="checkbox" type="checkbox">Receive a copy of this message
+    </div>
+  </section>
 </main>
 
   <footer>
