--- a/final-project/index.html
+++ b/final-project/index.html
@@ -51,8 +51,20 @@
 
  <a href="reservation.html" class="reserveButton">Make a Reservation</a>
 
- <h2 class="indexH2">Home</h2>
+ <h2 class="indexH2"></h2>
 
+<section class="content">
+  <div>
+    <img src="images/templeCuritiba.jpg" alt="LDS Temple in Curitiba">
+  </div>
+  <div class="text">
+    <h3>Curitiba Brazil Temple</h3>
+    <p>Announced in 2002, the Curitiba Brazil Temple of The Church of Jesus Christ of Latter-day Saints (LDS Church) was completed in early May 2008 and was dedicated June 1 by church president Thomas S. Monson. Located in Curitiba, the capital of Paraná state, it became the fifth LDS temple in Brazil.</p>
+    <p>The plans to build a temple in Curitiba were announced by the LDS Church on 23 August 2002. Ground was broken and the site was dedicated on 10 March 2005 by Russell M. Nelson of the Quorum of the Twelve Apostles. The temple serves Latter-day Saints in 21 stakes in the states of Paraná and Santa Catarina.</p>
+    <a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=eng"
+    target="_blank">More information about the Curitiba Temple</a>
+  </div>
+</section>
 
  <div class="contact">
   <div>
