--- a/final-project/confirmation.html
+++ b/final-project/confirmation.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The Temple Inn & Suites Website for CIT 230: Temples Page">
-  <title>CIT 230 | Final | Temples</title>
+  <meta name="description" content="The Temple Inn & Suites Website for CIT 230: Reservation confirmation">
+  <title>CIT 230 | Final | Confirmation</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/large.css">
   <link rel="stylesheet" href="styles/medium.css">
@@ -13,7 +13,6 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Roboto&display=swap" rel="stylesheet">
   <script src="functions/dateVerify.js"></script>
   <script src="functions/Menu.js"></script>
-  <script src="functions/temples.js"></script>
 </head>
 
 <body onload="dates()">
@@ -35,7 +34,7 @@
     <button onclick="toggleMenu()">&#9776; Menu</button>
     <ul id="pageOptions" class="hide">
       <li><a href="index.html">Home</a></li>
-      <li><a id="active-page">Temples</a></li>
+      <li><a href="temples.html">Temples</a></li>
       <li><a href="reservation.html">Reservation</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -43,27 +42,7 @@
   </nav>
 
 <main>
-  <h2>Temples</h2>
-
-
-
-
-
-
-
-
-  <div class="towns"> </div>
-
-
-
-
-
-
-
-
-
-
-
+  <h2>Confirmation</h2>
 </main>
 
   <footer>
