--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -43,6 +43,90 @@
 
 <main>
   <h2>Reservation</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <form method="get" action="thanks.html">
+    <fieldset>
+      <legend>Storm Report</legend>
+      <label class="top">Full Name* <input type="text" name="name" placeholder="Your name" pattern="[A-z\s]{5,}"
+          required></label>
+      <label class="top">Email* <input type="email" name="email" placeholder="name@email.com" required></label>
+      <label class="top">Phone* <input type="tel" name="phone" placeholder="" required></label>
+      <label class="top">Zip code* <input type="text" name="zipcode" placeholder="" required></label>
+      <label class="top">Storm date <input type="date" name="date"></label>
+
+      <label class="top">Storm type<input type="text" name="type" list="stormtype"></label>
+      <datalist id="stormtype">
+        <option value="Flash Flood"></option>
+        <option value="Hail"></option>
+        <option value="Hurricane"></option>
+        <option value="Thunderstorm"></option>
+        <option value="Tornado"></option>
+      </datalist>
+
+      <label class="top">Severity <input type="range" id="severity" value="5" min="1" max="10" step="1" list="marks"
+          oninput="severityValue(this.value)" onchange="severityValue(this.value)"></label>
+      <span id="severValue">5</span>
+      <datalist id="marks">
+        <option value="1">
+        <option value="2">
+        <option value="3">
+        <option value="4">
+        <option value="5">
+        <option value="6">
+        <option value="7">
+        <option value="8">
+        <option value="9">
+        <option value="10">
+      </datalist>
+
+      <label class="top" id="region">Storm Region
+        <select name="region">
+          <option value="" disabled selected>Please Select</option>
+          <option value="preston">Preston</option>
+          <option value="sodasprings">Soda Springs</option>
+          <option value="fishhaven">Fish Haven</option>
+        </select>
+      </label>
+
+      <div>Are you in danger?</div>
+      <label class="sbs"><input type="radio" name="danger" value="yes"> Yes</label>
+      <label class="sbs"><input type="radio" name="danger" value="maybe"> Maybe</label>
+      <label class="sbs"><input type="radio" name="danger" value="no"> No</label>
+
+      <div id="area">
+        <label class="top">Additional comments <textarea name="comments"
+            placeholder="Any additional commentary"></textarea></label>
+      </div>
+    </fieldset>
+
+    <input type="submit" value="Send report" class="submitBtn">
+  </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </main>
 
   <footer>
